Add normalize.css and update HTML structure with new class names

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="src/styles.css" />
+    <link rel="stylesheet" href="src/normalize.css">
     <title>Nuevas colecciones</title>
   </head>
 
@@ -23,14 +24,14 @@
         ></image>
       </div>
 
-      <nav class="nav">
+      <nav class="header__nav">
         <h1 class="nav__section">MODA MUJER</h1>
         <h1 class="nav__section">MODA HOMBRE</h1>
         <h1 class="nav__section">MODA COLECCIÓN</h1>
         <h1 class="nav__section">COLECIONES ESPECIALES</h1>
       </nav>
 
-      <div class="functions">
+      <div class="header__functions">
         <image
           src="assets/icon/icon-user.svg"
           alt="user"
@@ -136,15 +137,13 @@
       </div>
 
       <div class="footer__contact">
-        <div class="contact__icon">
-        </div>
         <p class="contact__text">Devoluciones y cambios</p>
       </div>
 
       <div class="footer__contact">
         <div class="contact__icon">
           <Image src="assets/icon/icon-phone.svg"
-          alt="truck"
+          alt="phone"
           class="icon__icon"></Image>
         </div>
         <p class="contact__text">+375(29)749-18-23</p>
@@ -152,8 +151,8 @@
 
       <div class="footer__contact">
         <div class="contact__icon">
-          <Image src="assets/icon/icon-phone.svg"
-          alt="truck"
+          <Image src="assets/icon/icon-mail.svg"
+          alt="mail"
           class="icon__icon"></Image>
         </div>
         <p class="contact__text">shop@omix.com</p>
